--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 header {
   background: #333333;
   padding: 8px;
-  margin: -6px;
+  margin: -6px 0px 0px 0px;
   width: 405px;
   box-shadow: 0px 0px 5px 10px rgb(0,0,0,0.2);
   position: fixed;
