--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
   background: #333333;
   padding: 8px;
   margin: -6px 0px 0px 0px;
-  width: 100%;
+  width: 440px;
   box-shadow: 0px 0px 5px 10px rgb(0,0,0,0.2);
   position: fixed;
   text-align: center;
